fixing footerbodyoverflow

--- a/src/assets/css/4-pages/_footer.sass
+++ b/src/assets/css/4-pages/_footer.sass
@@ -71,3 +71,11 @@ footer
 					float: left
 				span
 					line-height: 3
+
+@media all and (max-width: 890px)
+	footer
+		.flex--flex-direction
+			flex-wrap: wrap
+			justify-content: space-around
+
+
