--- a/src/assets/css/4-pages/_grid.sass
+++ b/src/assets/css/4-pages/_grid.sass
@@ -20,8 +20,9 @@ $HeaderHeight: 330px
 .col-4
 	max-width: 244px
 .col-3
-	width: 33%
 	max-width: 270px
+	// flex: 1
+	margin: 0px 10px
 
 .container
 	max-width: $container
@@ -35,7 +36,8 @@ section
 		display: inline-block
 		padding-left: 5px
 
-
 section.grey
 	background:
 		color: #eeeeee
+
+
